<resources>
    <string name="app_name">Easy Pharma</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">Lastname</string>
    <string name="lastname">Firstname</string>
    <string name="mobile_num">Phone number</string>
    <string name="NSS">Social Security number</string>
    <string name="create">Create Account</string>
    <string name="retourne">Already a member? Login</string>
    <string name="pharmacy">Show by city</string>
    <string name="gardeLocation">On-call</string>
    <string name="commande">Order management</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="owner">Owner:</string>
    <string name="address">Adress:</string>
    <string name="worktime">Work time:</string>
    <string name="phonenumber">Phone number:</string>
    <string name="caisseConv">Contracted cashier:</string>
    <string name="lienFcbk">Page Facebook link:</string>
    <string name="lienmap">Map link:</string>
    <string name="datagard">On call date:</string>
    <string name="details">Details</string>
    <string name="description">These are the details on the pharmacy you want:</string>
    <string name="cancel">CANCEL</string>
    <string name="negativeText">Cancel</string>
    <string name="positiveText">Show on Map</string>
    <string name="google_map_Api_key">AIzaSyAq-QaBVqCz09LnQwcr6Opjezfe9oKqcMQ</string>
    <string name="searchBarHInt">Enter Address, City or Zip Code</string>
    <string name="myLocation">My location</string>
    <string name="lienMap">Click here to show the phamacy location on the map</string>
    <string name="home">Home</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_camand">ActivityCamand</string>
    <string name="photos">Commencer par importer votre ordeonnace</string>
    <string name="gelerie">Galerie</string>
    <string name="send">Envoyer</string>
    <string name="title_activity_detail_pharma">DetailPharma</string>
    <string name="map">Map</string>
    <string name="camandd">Creer Commande</string>
    <string name="retour">Retour</string>
    <string name="ConfirmationCode">Code de Confirmation</string>
    <string name="Password">Mot de passe</string>
    <string name="ConfirmerPassword">Confirmer le mot de passe</string>
    <string name="Annuler">Annuler</string>
    <string name="logout">LogOut</string>
    <string name="confirmer">Confirmer</string>
</resources>
