<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:gravity="bottom|end"
    android:orientation="horizontal">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

       <ImageView android:src="@drawable/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal" />
         <!-- Firstname Label -->

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/input_lastname"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPersonName"
                      android:hint="@string/firstname" />
        </com.google.android.material.textfield.TextInputLayout>

       <!-- Lastname Label-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/lastname" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- mobile number -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/input_mobile"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:hint="@string/mobile_num" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- NSS Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/input_NSS"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="number"
                      android:hint="@string/NSS"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Signup Button -->
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/create"/>
       <!-- retourn login -->
        <TextView android:id="@+id/link_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/retourne"
                  android:gravity="center"
                  android:textSize="16dip"/>
    </LinearLayout>
    </ScrollView>

   <!-- <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_below="@+id/scrollview"
        app:menu="@menu/botton_navigation"
        app:itemIconTint="@color/black"/>-->

