<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fitsSystemWindows="true"
            android:orientation="horizontal">


<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
    <ImageView android:src="@drawable/logo"
               android:layout_width="wrap_content"
               android:layout_height="72dp"
               android:layout_marginBottom="24dp"
               android:layout_gravity="center_horizontal" />

    <!--  Phone number Label -->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/ConfirmationCode" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--  Password Label -->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Password"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!--  Password Label -->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/ConfirmerPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/confirmer"/>

    <TextView android:id="@+id/link_Anuller"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="24dp"
              android:text="@string/Annuler"
              android:visibility="gone"
              android:gravity="center"
              android:textSize="16dip"/>
</LinearLayout>
</ScrollView>

        <!--<?xml version="1.0" encoding="utf-8"?>
         <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="io.pharmacie.ConfirmationActivity">

        </androidx.constraintlayout.widget.ConstraintLayout>
        -->