<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="io.pharmacie.detail_pharma">
    <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
            <ImageView
                    android:src="@drawable/ic_pharmacien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/owner"
                    android:textStyle="bold"
                    android:text="@string/owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
            <TextView
                    android:id="@+id/ownerContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
            <ImageView
                    android:src="@drawable/ic_adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/adress"
                    android:textStyle="bold"
                    android:text="@string/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>

            <TextView
                    android:id="@+id/adressContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
            <ImageView
                    android:src="@drawable/ic_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/worktime"
                    android:text="@string/worktime"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>

            <TextView
                    android:id="@+id/worktimeContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
            <ImageView
                    android:src="@drawable/ic_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/phoneNumber"
                    android:textStyle="bold"
                    android:text="@string/phonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>

            <TextView
                    android:id="@+id/phoneNumberContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
            <ImageView
                    android:src="@drawable/ic_caisse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/caissConv"
                    android:textStyle="bold"
                    android:text="@string/caisseConv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>

            <TextView
                    android:id="@+id/caissConvContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
            <ImageView
                    android:src="@drawable/ic_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/lienfcbk"
                    android:text="@string/lienFcbk"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>

            <TextView
                    android:id="@+id/lienfcbkContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:orientation="horizontal"
              android:layout_height="wrap_content"
              android:layout_margin="5dp">
              <ImageView
                  android:src="@drawable/ic_map"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
              <TextView
                  android:id="@+id/lienMap"
                  android:text="@string/lienmap"
                  android:textStyle="bold"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"/>

              <TextView
                  android:id="@+id/lienMapContent"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />

          </LinearLayout> -->
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
            <ImageView
                    android:src="@drawable/ic_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/datagard"
                    android:layout_marginLeft="10dp"
                    android:text="@string/datagard"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/datagardContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
    <ImageView
            android:layout_width="384dp"
            android:layout_height="154dp" app:srcCompat="@drawable/images"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/map"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/map" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/cmd" app:layout_constraintHorizontal_bias="0.5"
            android:background="#9C3CBDAB" android:textColor="@color/accent"/>
    <Button
            android:text="@string/camandd"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/cmd"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/retour" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/map" android:layout_marginTop="8dp"
            android:background="#9C3CBDAB" android:textColor="@color/accent"/>
    <Button
            android:text="@string/retour"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/cmd" android:layout_marginEnd="8dp" android:id="@+id/retour"
            app:layout_constraintHorizontal_bias="0.5" android:background="#9C3CBDAB"
            android:textColor="@color/accent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
